<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:paddingHorizontal="16dp"
    android:background="@color/screem_background"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.views.RegisterActivity">

    <TextView
        android:layout_width="0dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/register_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/edit_email"
        android:textSize="32sp"
        android:layout_marginBottom="32dp"
        android:textStyle="bold" />

    <EditText
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/edit_password"
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/hint_email_field"
        android:background="@color/itensColor"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:maxLength="30"
        android:padding="18dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/hint_password_field"
        android:background="@color/itensColor"
        android:inputType="numberPassword"
        android:maxLines="1"
        android:padding="18dp"
        android:textSize="18sp" />

    <ImageButton
        android:id="@+id/btn_show_password"
        android:background="@color/itensColor"
        android:layout_width="wrap_content"
        android:contentDescription="TODO"
        android:src="@drawable/img_eye_close"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/edit_password"
        app:layout_constraintBottom_toBottomOf="@id/edit_password"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/secondary"
        android:padding="12dp"
        android:text="@string/text_register_button"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_password" />


</androidx.constraintlayout.widget.ConstraintLayout>